--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,11 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.joke-container {
+  height: 500px;
+  margin-top: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
