--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,15 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .joke-container {
-  height: 500px;
-  margin-top: 200px;
   display: flex;
+  margin: 0 20px;
   flex-direction: column;
   align-items: center;
 }
