--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,11 @@
   flex-direction: column;
   align-items: center;
 }
+button {
+  width: 100px;
+}
+@media screen and (max-width: 500px) {
+  button {
+    width: 300px;
+  }
+}
